--- a/index.html
+++ b/index.html
@@ -7,15 +7,33 @@
     <title>Matthew M. Roberts 2018 Porfolio Site</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
+    <link href="https://fonts.googleapis.com/css?family=Marck+Script|Rufina" rel="stylesheet">
   </head>
-  <body>
+  <body class="black">
     <div class="grid-container">
       <div class="grid-x grid-padding-x">
-        <div class="large-12 cell">
-          <h1>Welcome to My Porfolio</h1>
+        <div class="large-12 cell marginbox white purpleborder">
+          <h1 class='centertext'>Matthew M. Roberts</h1>
         </div>
       </div>
     </div>
+
+    <div class="grid-x grid-padding-x marginbox">
+      <div class="large-2 cell">
+      </div>
+      <div class="large-3 cell white purpleborder">
+        <h2 class='centertext'> This is merely filling </h2>
+      </div>
+      <div class="large-2 cell white purpleborder">
+        <h4 class='centertext'> perhaps this will be filled more properly </h4>
+      </div>
+      <div class="large-3 cell white purpleborder">
+        <h2 class='centertext'> In the Future </h2>
+      </div>
+      <div class="large-2 cell">
+      </div>
+    </div>
+  </div>
 
 
     <script src="js/vendor/jquery.js"></script>
