Landing Page Ver 1

--- a/index.html
+++ b/index.html
@@ -7,33 +7,96 @@
     <title>Matthew M. Roberts 2018 Porfolio Site</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
-    <link href="https://fonts.googleapis.com/css?family=Marck+Script|Rufina" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two|Rufina|Marck+Script" rel="stylesheet">
   </head>
-  <body class="black">
+  <body class="bone">
+    <div class="mainborder">
     <div class="grid-container">
-      <div class="grid-x grid-padding-x">
-        <div class="large-12 cell marginbox white purpleborder">
-          <h1 class='centertext'>Matthew M. Roberts</h1>
+      <div class="grid-x">
+        <div class="large-3 cell bone">
+        </div>
+        <div class="large-6 cell white marginbox">
+          <h2 class='centertext'>Matthew M. Roberts</h2>
+        </div>
+        <div class="large-3 cell bone">
         </div>
       </div>
     </div>
 
-    <div class="grid-x grid-padding-x marginbox">
-      <div class="large-2 cell">
+    <div class="grid-x grid-padding-x">
+      <div class="large-4 cell">
       </div>
-      <div class="large-3 cell white purpleborder">
-        <h2 class='centertext'> This is merely filling </h2>
+      <div class="large-4 cell">
+        <h1 class='centertext'> Design </h1>
       </div>
-      <div class="large-2 cell white purpleborder">
-        <h4 class='centertext'> perhaps this will be filled more properly </h4>
-      </div>
-      <div class="large-3 cell white purpleborder">
-        <h2 class='centertext'> In the Future </h2>
-      </div>
-      <div class="large-2 cell">
+      <div class="large-4 cell">
       </div>
     </div>
+
+    <div class="grid-x grid-padding-x">
+      <div class="large-4 cell">
+      </div>
+      <div class="large-4 cell">
+        <img src="imgs/Another Detour.jpg" alt="Spring 2017 Abstract Design in black and white">
+      </div>
+      <div class="large-4 cell">
+      </div>
+    </div>
+
+    <div class="grid-x grid-padding-x margintop">
+      <div class="large-4 cell">
+      </div>
+      <div class="large-4 cell">
+        <h4 class="centertext"> <a class="portfolio" href="pages/contact.html"> Portfolio </a></h4>
+      </div>
+      <div class="large-4 cell">
+      </div>
+    </div>
+
+    <div class="grid-x grid-padding-x margintop">
+      <div class="large-4 cell">
+      </div>
+      <div class="large-4 cell">
+        <h4 class="centertext"> <a class="clickme" href="pages/contact.html"> Contact Me </a></h4>
+      </div>
+      <div class="large-4 cell">
+      </div>
+    </div>
+
+    <div class="grid-x grid-padding-x margintop">
+      <div class="large-3 cell">
+      </div>
+      <div class="large-6 cell bone">
+        <h3 class="paddingleft centertext"> Focused Designs <br> Unique Visuals <br> Buisness and Promotion</h3>
+      </div>
+      <div class="large-3 cell">
+      </div>
+
+    <div class="grid-x grid-padding-x margintop">
+      <div class="large-1 cell">
+      </div>
+      <div class="large-5 cell bone">
+        <div class="whiter">
+        <p>I work directly with buisnesses and clients to produce specialized and direct websites, images, and logos suited for their buisness ventures.
+        </p>
+        <p>I have experience with Adobe Photoshop, Illustrator, Lightroom, and Photography, as well as a Junior-Level college education with a focus in Graphic Design.
+        </p>
+        <p>My work has been featured in two different college art shows and is crafted with great thought in mind.
+        </p>
+        <img src="imgs/lmcproj.jpg" alt="Spring 2017 Art Poster Promotion for Los Medanos College">
+      </div>
+      </div>
+      <div class="large-5 cell bone">
+        <img src="imgs/logos.jpg" alt="Spring 2017 Logos for fictional Southern Californian Housing Buisness">
+      </div>
+      <div class="large-1 cell">
+      </div>
+
+    </div>
+
+
   </div>
+
 
 
     <script src="js/vendor/jquery.js"></script>
