--- a/index.html
+++ b/index.html
@@ -4,24 +4,36 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matthew M. Roberts 2018 Porfolio Site</title>
+    <title>Matthew M. Roberts Design</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two|Rufina|Marck+Script" rel="stylesheet">
   </head>
-  <body class="bone">
-    <div class="mainborder">
+  <header>
     <div class="grid-container">
-      <div class="grid-x">
-        <div class="large-3 cell bone">
-        </div>
-        <div class="large-6 cell white marginbox">
-          <h2 class='centertext'>Matthew M. Roberts</h2>
-        </div>
-        <div class="large-3 cell bone">
-        </div>
+    <div class="grid-x">
+      <div class="large-3 cell bone">
+      </div>
+      <div class="large-6 cell white marginbox">
+        <h2 class='centertext'>Matthew M. Roberts</h2>
+      </div>
+      <div class="large-3 cell bone">
       </div>
     </div>
+  </div>
+
+  <nav>
+    <ul>
+      <li> <a class="blacktext current" href="index.html"> Home Page </a></li>
+      <li> <a class="blacktext" href="pages/portfoliohome.html"> Portfolio </a></li>
+      <li> <a class="blacktext" href="pages/about.html"> About Page </a></li>
+      <li> <a class="blacktext" href="pages/contact.html"> Contact Me </a></li>
+    </ul>
+  </nav>
+
+  </header>
+
+  <body class="bone">
 
     <div class="grid-x grid-padding-x">
       <div class="large-4 cell">
@@ -47,7 +59,7 @@
       <div class="large-4 cell">
       </div>
       <div class="large-4 cell">
-        <h4 class="centertext"> <a class="portfolio" href="pages/contact.html"> Portfolio </a></h4>
+        <h4 class="centertext"> <a class="portfolio" href="pages/portfoliohome.html"> Portfolio </a></h4>
       </div>
       <div class="large-4 cell">
       </div>
@@ -91,7 +103,6 @@
       </div>
       <div class="large-1 cell">
       </div>
-
     </div>
 
 
