2 pages + image qual + footer + localnav
Re-optimized images, fixed local nav, footer/contact, contact and about pages.

Need to do: 3 more image pages

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="large-4 cell">
       </div>
       <div class="large-4 cell">
-        <img src="imgs/Another Detour.jpg" alt="Spring 2017 Abstract Design in black and white">
+        <img src="imgs/Another-Detour.gif" alt="Spring 2017 Abstract Design in black and white">
       </div>
       <div class="large-4 cell">
       </div>
@@ -95,16 +95,28 @@
         </p>
         <p>My work has been featured in two different college art shows and is crafted with great thought in mind.
         </p>
-        <img src="imgs/lmcproj.jpg" alt="Spring 2017 Art Poster Promotion for Los Medanos College">
+        <img src="imgs/lmcproj.gif" alt="Spring 2017 Art Poster Promotion for Los Medanos College">
       </div>
       </div>
       <div class="large-5 cell bone">
-        <img src="imgs/logos.jpg" alt="Spring 2017 Logos for fictional Southern Californian Housing Buisness">
+        <img src="imgs/logos.gif" alt="Spring 2017 Logos for fictional Southern Californian Housing Buisness">
       </div>
       <div class="large-1 cell">
       </div>
     </div>
 
+<footer>
+  <div class="grid-x grid-padding-x margintop">
+    <div class="large-3 cell">
+    </div>
+    <div class="large-6 cell">
+      <p> Email: Matthewr9937@gmail.com <br> Phone Number: (925) 350-1818 </p>
+    </div>
+    <div class="large-3 cell">
+    </div>
+  </div>
+
+</footer>
 
   </div>
 
