--- a/pages/detour.html
+++ b/pages/detour.html
@@ -32,6 +32,14 @@
     </ul>
   </nav>
 
+  <nav>
+    <ul class="margintop">
+      <li><a href="lmcproj.html"> <img src="../imgs/lmcprojthumb50.jpg" alt="Link to Spring 2017 Art Poster Promotion for Los Medanos College"> </a></li>
+      <li><a href="detour.html"><img src="../imgs/another detourthumb50.jpg" alt="Link to 2D black/white abstract design Another Detour"></a></li>
+      <li><a href="logo.html"><img src="../imgs/logosthumb50.gif" alt="Link to Logos created for a fictional Southern Californian Housing Group"></a></li>
+    </ul>
+  </nav>
+
   </header>
 
   <body class="bone">
@@ -49,8 +57,12 @@
       </div>
 
       <div class="grid-x grid-padding-x">
-        <div class="cell">
-          <img src="../imgs/another detour.jpg" alt="A Full-Size image of a black and white abstract ink drawing which was featured in a 2017 community collage art show.">
+        <div class="large-1 cell">
+        </div>
+        <div class="large-10 cell">
+          <img class="centertext" src="../imgs/Another-Detour.gif" alt="A Full-Size image of a black and white abstract ink drawing which was featured in a 2017 community collage art show.">
+        </div>
+        <div class="large-1 cell">
         </div>
       </div>
 
@@ -72,7 +84,18 @@
         </div>
       </div>
 
+      <footer>
+        <div class="grid-x grid-padding-x margintop">
+          <div class="large-3 cell">
+          </div>
+          <div class="large-6 cell centertext">
+            <p> Email: Matthewr9937@gmail.com <br> Phone Number: (925) 350-1818 </p>
+          </div>
+          <div class="large-3 cell">
+          </div>
+        </div>
 
+      </footer>
 
     </div>
 
