--- a/pages/logo.html
+++ b/pages/logo.html
@@ -32,6 +32,14 @@
     </ul>
   </nav>
 
+  <nav>
+    <ul class="margintop">
+      <li><a href="lmcproj.html"> <img src="../imgs/lmcprojthumb50.jpg" alt="Link to Spring 2017 Art Poster Promotion for Los Medanos College"> </a></li>
+      <li><a href="detour.html"><img src="../imgs/another detourthumb50.jpg" alt="Link to 2D black/white abstract design Another Detour"></a></li>
+      <li><a href="logo.html"><img src="../imgs/logosthumb50.gif" alt="Link to Logos created for a fictional Southern Californian Housing Group"></a></li>
+    </ul>
+  </nav>
+
   </header>
 
   <body class="bone">
@@ -50,7 +58,7 @@
 
       <div class="grid-x grid-padding-x">
         <div class="cell">
-          <img src="../imgs/logos.jpg" alt="A series of potential housing company logos created as a practice assignment.">
+          <img src="../imgs/logos.gif" alt="A series of potential housing company logos created as a practice assignment.">
         </div>
       </div>
 
@@ -72,7 +80,18 @@
         </div>
       </div>
 
+      <footer>
+        <div class="grid-x grid-padding-x margintop">
+          <div class="large-3 cell">
+          </div>
+          <div class="large-6 cell centertext">
+            <p> Email: Matthewr9937@gmail.com <br> Phone Number: (925) 350-1818 </p>
+          </div>
+          <div class="large-3 cell">
+          </div>
+        </div>
 
+      </footer>
 
     </div>
 
