--- a/pages/portfoliohome.html
+++ b/pages/portfoliohome.html
@@ -32,14 +32,6 @@
     </ul>
   </nav>
 
-  <nav>
-    <ul>
-      <li><a href="lmcproj.html"> <img src="../imgs/lmcprojthumb150.jpg" alt="Link to Spring 2017 Art Poster Promotion for Los Medanos College"> </a></li>
-      <li><a href="detour.html"><img src="../imgs/another detourthumb150.jpg" alt="Link to Spring 2017 Art Poster Promotion for Los Medanos College"></a></li>
-      <li><a href="logos.html"><img src="../imgs/logosthumb150.jpg" alt="Link to Spring 2017 Art Poster Promotion for Los Medanos College"></a></li>
-    </ul>
-  </nav>
-
   </header>
 
   <body class="bone">
@@ -59,23 +51,36 @@
       <div class="grid-x grid-padding-x margintop">
         <div class="large-4 cell">
           <figure>
-          <a href="lmcproj.html"><img src="../imgs/lmcprojthumb.jpg" alt="Link to Spring 2017 Art Poster Promotion for Los Medanos College"></a>
+          <a href="lmcproj.html"><img src="../imgs/lmcprojthumb.gif" alt="Link to Spring 2017 Art Poster Promotion for Los Medanos College"></a>
             <a href="lmcproj.html"><figcaption class="paddingleft blacktext white">Promotion Poster for Los Medanos Community College's Art Department.</figcaption></a>
           </figure>
         </div>
         <div class="large-4 cell">
           <figure>
-          <a href="detour.html"><img src="../imgs/Another Detourthumb.jpg" alt="Spring 2017 Abstract Design in black and white"></a>
+          <a href="detour.html"><img src="../imgs/Another-Detourthumb.gif" alt="Spring 2017 Abstract Design in black and white"></a>
           <a href="detour.html"><figcaption class="paddingleft blacktext white">Black and White Design Project. Chosen for LMC Spring 2017 Art Show.</figcaption></a>
           </figure>
         </div>
         <div class="large-4 cell">
           <figure>
-          <a href="logo.html"><img src="../imgs/logosthumb.png" alt="Spring 2017 Logos for fictional Southern Californian Housing Buisness"></a>
+          <a href="logo.html"><img src="../imgs/logosthumb.gif" alt="Spring 2017 Logos for fictional Southern Californian Housing Buisness"></a>
           <a href="logo.html"><figcaption class="paddingleft blacktext white">Sample Logos Created for a Southern Californian Housing Company.</figcaption></a>
           </figure>
         </div>
       </div>
+
+      <footer>
+        <div class="grid-x grid-padding-x margintop">
+          <div class="large-3 cell">
+          </div>
+          <div class="large-6 cell centertext">
+            <p> Email: Matthewr9937@gmail.com <br> Phone Number: (925) 350-1818 </p>
+          </div>
+          <div class="large-3 cell">
+          </div>
+        </div>
+
+      </footer>
 
     </div>
 
