More 2 image pages / update nav
more image pages and updating the nav for it

--- a/pages/lmcproj.html
+++ b/pages/lmcproj.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matthew M. Roberts Portfolio LMC Art Poster</title>
+    <title>Matthew M. Roberts Portfolio LMC Poster</title>
     <link rel="stylesheet" href="../css/foundation.css">
     <link rel="stylesheet" href="../css/app.css">
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two|Rufina|Marck+Script" rel="stylesheet">
@@ -37,6 +37,8 @@
       <li><a href="lmcproj.html"> <img src="../imgs/lmcprojthumb50.jpg" alt="Link to Spring 2017 Art Poster Promotion for Los Medanos College"> </a></li>
       <li><a href="detour.html"><img src="../imgs/another detourthumb50.jpg" alt="Link to 2D black/white abstract design Another Detour"></a></li>
       <li><a href="logo.html"><img src="../imgs/logosthumb50.gif" alt="Link to Logos created for a fictional Southern Californian Housing Group"></a></li>
+      <li><a href="dojo.html"> <img src="../imgs/Garden_dojothumb50.gif" alt="Link to photograph taken from the Hayward Japanese Tea Gardens"> </a></li>
+      <li><a href="zorn.html"><img src="../imgs/Zornthumb50.gif" alt="Link to Zorn-style image"></a></li>
     </ul>
   </nav>
 
@@ -50,7 +52,7 @@
         <div class="large-4 cell">
         </div>
         <div class="large-4 cell">
-          <h2 class='centertext'> Promotional Poster </h2>
+          <h2 class='centertext'> LMC Poster </h2>
         </div>
         <div class="large-4 cell">
         </div>
@@ -58,7 +60,7 @@
 
       <div class="grid-x grid-padding-x">
         <div class="cell">
-          <img src="../imgs/lmcproj.gif" alt="A Full-Size image of a promotional piece for Los Medanos Collage's Art Department">
+          <img src="../imgs/lmcproj.gif" alt="A promotional poster for Los Medanos Collage's art department.">
         </div>
       </div>
 
