--- a/pages/portfoliohome.html
+++ b/pages/portfoliohome.html
@@ -69,6 +69,23 @@
         </div>
       </div>
 
+      <div class="grid-x grid-padding-x margintop">
+        <div class="large-4 cell">
+          <figure>
+          <a href="dojo.html"><img src="../imgs/Garden_dojothumb.gif" alt="Link to picture taken of Hayward Japanese Tea Gardens"></a>
+            <a href="dojo.html"><figcaption class="paddingleft blacktext white">Photography Image taken at the Hayward Japanese Tea Garden.</figcaption></a>
+          </figure>
+        </div>
+        <div class="large-4 cell">
+          <figure>
+          <a href="zorn.html"><img src="../imgs/Zorn.gif" alt="Link to Tablet-Drawn Zorn-Styled image"></a>
+          <a href="zorn.html"><figcaption class="paddingleft blacktext white">Photograph recreated only with lines in the style of Zorn.</figcaption></a>
+          </figure>
+        </div>
+        <div class="large-4 cell">
+        </div>
+      </div>
+
       <footer>
         <div class="grid-x grid-padding-x margintop">
           <div class="large-3 cell">
