--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/foundation.css">
     <link rel="stylesheet" href="../css/app.css">
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two|Rufina|Marck+Script" rel="stylesheet">
+
   </head>
   <header>
     <div class="grid-container">
@@ -15,7 +16,7 @@
       <div class="large-3 cell bone">
       </div>
       <div class="large-6 cell white marginbox">
-        <h2 class='centertext'>Matthew M. Roberts</h2>
+        <h3 class='centertext'>Matthew M. Roberts</h3>
       </div>
       <div class="large-3 cell bone">
       </div>
@@ -62,6 +63,7 @@
       <div class="large-4 cell">
         <p> Please Email or Text me first. A response should be delivered within 10 hours of contact.
         </p>
+        <h2 id="time" class="centertext"> I live in the PST timezone </h2>
       </div>
       <div class="large-4 cell">
       </div>
@@ -76,4 +78,22 @@
     <script src="js/vendor/foundation.js"></script>
     <script src="js/app.js"></script>
   </body>
+
+  <script>
+
+  var today = new Date();
+  var hourNow = today.getHours();
+
+
+  if (hourNow > 18) {
+    document.getElementById("time").innerHTML = "I am off work or asleep at the moment";
+  }
+  else if (hourNow > 8) {
+    document.getElementById("time").innerHTML = "I am currently at work";
+  }
+  else {
+    document.getElementById("time").innerHTML = "I am most likely sleeping or preparing for work at this time";
+  }
+
+  </script>
 </html>
